--- a/_config.yml
+++ b/_config.yml
@@ -22,12 +22,10 @@ markdown: kramdown
 paginate: 5
 paginate_path: "/:num/"
 date_format: "%b %-d, %Y"
-title: Arcanist & Artificer
+title: SP/Arcanum
 email: sparkles@sparcanum.io
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A repository for research, notes, and experiments. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sparkles_34_32
